[project]
name = "forecast"
version = "0.1.0"
description = "売上予測システム"
authors = [{ name = "Your Name" }]
dependencies = [
    "numpy>=1.19.0",
    "pandas>=1.2.0",
    "scikit-learn>=0.24.0",
    "torch>=1.8.0",
    "timm>=0.4.12",
    "accelerate>=0.5.1",
    "joblib>=1.0.1",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=6.0.0",
    "black>=21.5b2",
    "flake8>=3.9.0",
    "isort>=5.8.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sample"]

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cu124"
type = "index"
